WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119251
Pass column as 4th argument to WorkerGlobalScope.onerror and Window.onerror handlers
https://bugs.webkit.org/show_bug.cgi?id=119251
Summary
Pass column as 4th argument to WorkerGlobalScope.onerror and Window.onerror h...
Chris Dumez
Reported
2013-07-30 06:17:37 PDT
As per the latest WebWorker specification, the WorkerGlobalScope.onerror and Window.onerror event handlers should be given the column as fourth argument:
http://www.whatwg.org/specs/web-apps/current-work/multipage/workers.html#workerglobalscope
http://www.whatwg.org/specs/web-apps/current-work/multipage/webappapis.html#onerroreventhandler
This is already supported by IE10 and Blink. Corresponding Blink revision:
https://src.chromium.org/viewvc/blink?revision=154630&view=revision
Test case:
http://samples.msdn.microsoft.com/ietestcenter/WebWorkers/webworkers_harness.htm?url=WorkerGlobalScope_ErrorEvent_colno.htm
Attachments
Patch
(32.03 KB, patch)
2013-07-30 07:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(32.02 KB, patch)
2013-07-30 07:07 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-07-30 07:00:15 PDT
Created
attachment 207733
[details]
Patch
Chris Dumez
Comment 2
2013-07-30 07:07:28 PDT
Created
attachment 207734
[details]
Patch
Geoffrey Garen
Comment 3
2013-07-30 09:07:50 PDT
Comment on
attachment 207734
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-07-30 10:37:45 PDT
Comment on
attachment 207734
[details]
Patch Clearing flags on attachment: 207734 Committed
r153480
: <
http://trac.webkit.org/changeset/153480
>
WebKit Commit Bot
Comment 5
2013-07-30 10:37:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug