LayoutTests/fast/workers/resources/worker-script-error-handled.js
@@ -1,7 +1,7 @@
-onerror = function(message, url, lineno)
+onerror = function(message, url, lineno, colno)
 {
-    postMessage("onerror invoked for a script that has script error '" + message + "' at line " + lineno);
+    postMessage("onerror invoked for a script that has script error '" + message + "' at line " + lineno + " and column " + colno);
     return true;
 }
 
-foo.bar = 0;
+if (true) foo.bar = 0;
